--- a/support.html
+++ b/support.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><img src="doc/logo.png"/><b>How to get Support for Seashore</b></span></p>
+<p class="p1"><span class="s1"><img src="https://raw.githubusercontent.com/robaho/seashore/master/doc/icon.png"/><b>How to get Support for Seashore</b></span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p3"><span class="s1">If things are running slowly:</span></p>
 <p class="p2"><span class="s1"></span><br></p>
